--- a/src/master/stok_barangadmin.form
+++ b/src/master/stok_barangadmin.form
@@ -111,7 +111,7 @@
               <Font name="Dialog" size="14" style="1"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/asset/find.png"/>
+              <Image iconType="3" name="/img_new/icons8-search-24.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="  SEARCH"/>
             <Property name="toolTipText" type="java.lang.String" value=""/>
@@ -156,7 +156,7 @@
               <Font name="Dialog" size="14" style="1"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/asset/reload.png"/>
+              <Image iconType="3" name="/img_new/icons8-refresh-24.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="  REFRESH"/>
           </Properties>
@@ -170,7 +170,7 @@
               <Font name="Dialog" size="14" style="1"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/asset/chevron.png"/>
+              <Image iconType="3" name="/img_new/icons8-go-back-24.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="  BACK"/>
           </Properties>
