--- a/src/user/Menu_User.form
+++ b/src/user/Menu_User.form
@@ -178,7 +178,7 @@
                   <Font name="Dialog" size="14" style="1"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/asset/logout.png"/>
+                  <Image iconType="3" name="/img_new/icons8-log-out-24.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="  LOGOUT"/>
               </Properties>
@@ -197,7 +197,7 @@
                   <Font name="Dialog" size="14" style="1"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/asset/attachment.png"/>
+                  <Image iconType="3" name="/img_new/icons8-history-24.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="  RIWAYAT"/>
                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
@@ -219,7 +219,7 @@
                   <Font name="Dialog" size="14" style="1"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/asset/file.png"/>
+                  <Image iconType="3" name="/img_new/icons8-transaction-24.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="  TRANSAKSI"/>
                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
@@ -241,7 +241,7 @@
                   <Font name="Dialog" size="14" style="1"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/asset/folder.png"/>
+                  <Image iconType="3" name="/img_new/icons8-data-quality-24.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="  DAFTAR MENU"/>
                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
@@ -312,7 +312,7 @@
             <Component class="javax.swing.JLabel" name="jLabel5">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/img/icons8-businessman-80.png"/>
+                  <Image iconType="3" name="/img_new/icons8-employee-50.png"/>
                 </Property>
               </Properties>
               <Constraints>
@@ -371,7 +371,7 @@
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
               <SubComponents>
-                <Component class="javax.swing.JTable" name="tb_riwayat">
+                <Component class="javax.swing.JTable" name="tb_riwayatuser">
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                       <Table columnCount="4" rowCount="4">
@@ -460,7 +460,7 @@
             <Property name="useNullLayout" type="boolean" value="true"/>
           </Layout>
           <SubComponents>
-            <Component class="javax.swing.JTextField" name="t_pendapatan1">
+            <Component class="javax.swing.JTextField" name="t_transaksi">
               <Properties>
                 <Property name="editable" type="boolean" value="false"/>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
